# hom-2

./: Dockerfile  bot.py  pyproject.toml
