[tool.poetry]
name = "homework 2"
version = "0.1.0"
description = ""
authors = ["Anastasiia2001148 <164914414+Anastasiia2001148@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
